--- a/src/components/Header/_Header.css
+++ b/src/components/Header/_Header.css
@@ -1,4 +1,44 @@
 .header{
-    height: 250px;
+    height: 150px;
     background: linear-gradient(to right,  #76db99 0%,#28add7 100%);
+}
+
+.header-wrapper{
+    height: 100%;
+    width: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.header__title{
+    color: white;
+}
+
+.header__form *{
+    margin: 0 10px;
+}
+
+.header__form-input{
+    padding: 10px 10px;
+    width: 300px;
+    border: none;
+    border-radius: 5px;
+}
+
+.header__form-btn{
+    padding: 10px 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #C16969;
+}
+
+.header__form-input:focus{
+    outline: 2px #2294B8 solid;
+}
+
+.header__form-btn:focus{
+    outline: 2px #B55454 solid;
 }
