--- a/src/components/Header/_Header.css
+++ b/src/components/Header/_Header.css
@@ -44,3 +44,26 @@
 .header__form-btn:focus{
     outline: 2px #B55454 solid;
 }
+
+@media (max-width: 768px) {
+    .header-wrapper{
+        width: 100%;
+    }
+
+    .header__form{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .header__form-input{
+        width: 100%;
+        margin: 10px;
+    }
+
+    .header__form-btn{
+        margin: 5px;
+        padding: 15px 30px;
+    }
+}
